Updates:
    esutil/io.py: 
        Added writing of xml files.

New methods:
    esutil/numpy_util.py: 
        descr_to_native:
            Remove byte order information from numpy type descriptor.
        strmatch: 
            string a string array to a regular expression

v0.5.1 (2012-04-27)
----------------------------------------------------------------------

Updates:
    Updated a number of places to use stderr for messages.

    esutil/coords.py: Added randcap function to produce random
        points in a spherical cap.  Use clip() instead of
        where in sphdist(), gcirc().  Added rec_area() to
        calculate the area of a rectangle in longitude and
        latitude.
    esutil/hfds.py: Added "du" function to calculate disk usage.
        Added is_in_hdfs() function.  File listings now include
        the hdfs:// in front by default.
    esutil/io.py: In read() Added ability to read rec file with
        no header of dtype is sent.
    esutil.stat: Added cov2cor and cor2cov functions to convert
        between covariance matrices and correlation matrices.
    esutil/misc.py: Added wlog() for quick logging to stderr.
    esutil/plotting.py: Added width keyword to bscatter.

v0.5.0 (2012-01-15)
----------------------------------------------------------------------
New files:
    esutil/hdfs.py: routines to get files in and out of the hadoop
        file system.  Also routines for listing, removing, etc.
    esutil/cosmology:
        Now using simplified cosmology package written in C.
    esutil/fits.py: 
        This is a workaround for reading subsets of columns and rows from fits
        files when only pyfits is available.  Note you should use
        the fitsio package instead:  https://github.com/esheldon/fitsio
        The io module will select fitsio if available, otherwise pyfits.
    esutil/sqlite_util.py:
        Wrapper class and functions to read/write from sqlite.

Removed Files: